--- a/lj/src/main/vue/src/views/login.less
+++ b/lj/src/main/vue/src/views/login.less
@@ -1,7 +1,9 @@
 .login{
     width: 100%;
     height: 100%;
-    background-image: url('https://file.iviewui.com/iview-admin/login_bg.jpg');
+    //https://lijunqaq.oss-cn-shenzhen.aliyuncs.com/wallhaven-6kpko7.jpg
+    //https://file.iviewui.com/iview-admin/login_bg.jpg
+    background-image: url('https://lijunqaq.oss-cn-shenzhen.aliyuncs.com/wallhaven-6kpko7.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
