--- a/lj/src/main/vue/src/views/system/Image.less
+++ b/lj/src/main/vue/src/views/system/Image.less
@@ -31,3 +31,38 @@
     border-color: #ccc;
     text-decoration: none
 }
+
+.img-xys {
+    display: inline-block;
+    height: auto;
+    max-width: 100%;
+}
+
+
+.logo{
+    float:left;
+    margin-left: 30px;
+    margin-top: 30px;
+    width: 400px;
+    height: 300px;
+   // background: #ead5e9;
+    //text-align: center;
+    display: inline-block;
+}
+.logo img{
+
+    -webkit-transition:all 1s;
+    -moz-transition:all 1s;
+    -o-transition:all 1s;
+    -webkit-transform:scale(1)   rotate(0deg);
+    -moz-transform:scale(1) rotate(0deg);
+    -o-transform:scale(1) rotate(0deg) ;
+    width: 100%;
+    height: 100%;
+}
+.logo:hover img{
+    -webkit-transform:scale(1)  rotate(360deg);
+    -moz-transform:scale(1)  rotate(360deg);
+    -o-transform:scale(1)   rotate(360deg);
+}
+
